--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
         \n\n\n eeee
         \n\n\n eee
     </string>
+    <string name="what_is_you_nickname">What is your Nickname?</string>
 </resources>
