--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
         \n\n\n eee
     </string>
     <string name="what_is_you_nickname">What is your Nickname?</string>
+    <string name="done">Done</string>
 </resources>
